feat(ontology): implement RDF ontology and data model for artwork provenance
Issue 1: RDF Ontology and Data Model Design

Ontology (fuseki/data/arp-ontology.ttl):
- Define ArP namespace with 5 core classes (Artwork, Artist, ProvenanceEvent, Owner, Location)
- Align with CIDOC-CRM, Dublin Core, PROV-O, and Schema.org vocabularies
- Add object properties for provenance chains (hasProvenanceEvent, fromOwner, toOwner)
- Add datatype properties for artwork metadata (medium, dimensions, period, style)
- Make Artist subclass of Owner for valid provenance semantics

Sample Data (fuseki/data/sample-data.ttl):
- Add 5 artworks with complete provenance chains (Mona Lisa, Starry Night, Birth of Venus, Car cu boi, Anemone)
- Include Romanian heritage artworks (Grigorescu, Luchian)
- Link to DBpedia and Wikidata via owl:sameAs
- Add museum locations with geographic coordinates

Infrastructure:
- Create custom Fuseki Dockerfile for TDB2 configuration
- Update docker-compose.yml to build Fuseki image and mount data volume
- Add comprehensive documentation (docs/ontology.md, fuseki/README.md)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
   fuseki:
-    image: stain/jena-fuseki:latest
+    build: ./fuseki
     container_name: arp-fuseki
     ports:
       - "3030:3030"
@@ -26,6 +26,7 @@ services:
       - ADMIN_PASSWORD=admin
     volumes:
       - fuseki-data:/fuseki
+      - ./fuseki/data:/staging:ro
 
 volumes:
   fuseki-data:
