fix(fuseki): resolve TDB2 configuration and permissions issues
- Fix Dockerfile to set correct ownership for /fuseki directory (uid 1000)
- Create /fuseki/configuration and /fuseki/databases/arp directories
- Add missing empty prefix declaration in config.ttl (@prefix : <#>)
- Update README with correct build command and troubleshooting docs
- Add backend dependency on fuseki service in docker-compose.yml

--- a/fuseki/Dockerfile
+++ b/fuseki/Dockerfile
@@ -1,6 +1,8 @@
 FROM stain/jena-fuseki:latest
 
-# Copy custom configuration for the ArP dataset
-# This provides a TDB2 persistent dataset with custom endpoint configuration
+USER root
+RUN mkdir -p /fuseki/configuration /fuseki/databases/arp
+
 COPY config/config.ttl /fuseki/configuration/arp.ttl
 
+RUN chown -R 1000:1000 /fuseki
