feat: add QR code generation and content negotiation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,7 @@ ARP_FUSEKI_PORT=3030
 ARP_FUSEKI_DATASET=arp
 ARP_FUSEKI_USERNAME=admin
 ARP_FUSEKI_PASSWORD=admin
+
+# Frontend URL (for QR code generation)
+# Change this to your production URL when deploying
+ARP_FRONTEND_BASE_URL=http://localhost:3000
