--- a/frontend/cloudbuild.yaml
+++ b/frontend/cloudbuild.yaml
@@ -10,4 +10,4 @@ steps:
 images:
   - 'gcr.io/$PROJECT_ID/arp-frontend'
 substitutions:
-  _VITE_API_BASE_URL: 'https://arp-backend-348542955632.europe-central2.run.app/api'
+  _VITE_API_BASE_URL: 'https://arp-backend-348542955632.europe-central2.run.app'
